--- a/src/components/CurrencyConverter.css
+++ b/src/components/CurrencyConverter.css
@@ -1,10 +1,14 @@
+body {
+    background: darkblue;
+}
+
 .converter {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2rem;
     border-radius: 10px;
-    width: 400px;
+    width: 600px;
     margin: 2rem auto;
     background-color: #f8f9fa;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -16,8 +20,7 @@
     margin-bottom: 2rem;
 }
 
-.converter input,
-.converter select {
+.converter input {
     width: 100%;
     padding: 0.7rem 1rem;
     box-sizing: border-box;
@@ -26,16 +29,36 @@
     color: #495057;
     background-color: #fff;
     border: 1px solid #ced4da;
+    text-align: center;
 }
 
 .converter input {
     margin-bottom: 30px;
 }
 
+.coins {
+    display: flex;
+    flex-direction: row;
+    width: 600px;
+}
+
+.coins select {
+    width: 100%;
+    padding: 0.7rem 1rem;
+    box-sizing: border-box;
+    border-radius: 4px;
+    font-size: 1rem;
+    color: #495057;
+    background-color: #fff;
+    border: 1px solid #ced4da;
+    text-align: center;
+}
+
+
 .converter span,
 .converter p {
-    margin: 0.5rem;
-    font-size: 1rem;
+    margin: 1rem;
+    font-size: 1.2rem;
     color: #495057;
 }
 
@@ -44,5 +67,15 @@
 }
 
 .h3 {
-    color: #495057;
+    font-size: 1.6rem;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(../assets/moedas.png);
+    background-position: center;
+    background-size: cover;
+    border-radius: 100px;
+    height: 150px;
+    width: 150px;
 }
